# ml_cleaner

./: .gitignore  Makefile  README.md  docker-compose.yml  machine_detail_example.json  package-lock.json  package.json  vite.config.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: adapters.rs  cache_reg.rs  clients.rs  commands.rs  config.rs  daemon.rs  lib.rs  main.rs  menu.rs  utilities.rs
src-tauri/src/adapters/file_config/: commands.rs
src-tauri/src/app/: mod.rs
src-tauri/src/app/common/: mod.rs
src-tauri/src/app/common/response_types/: mod.rs  project_responses.rs
src-tauri/src/app/comms_endpoint/: config_commands.rs  data_lake_commands.rs  image_verifier_commands.rs  model_hub_commands.rs  project_commands.rs
src-tauri/src/app/services/: config_service.rs  data_lake_service.rs  image_verifier_service.rs  mod.rs  model_hub_service.rs  project_service.rs
src-tauri/src/client_adapters/: mod.rs  models.rs  utils.rs
src-tauri/src/client_adapters/database/: activity_log_db.rs  deployment_db.rs  environment_db.rs  machine_db.rs  machine_db_test.rs  machine_event_db.rs  mod.rs  project_db.rs  sq_builder.rs  tag_db.rs
src-tauri/src/client_adapters/image_verifier/: mod.rs
src-tauri/src/client_adapters/model_hub/: mod.rs  paperspace.rs
src-tauri/src/client_adapters/repository/: file_config.rs
src-tauri/src/client_adapters/tests/: mod.rs
src-tauri/src/client_adapters/tests/integration_database/: deployment_db_int_test.rs  mod.rs  (+4 more)
src-tauri/src/client_adapters/time_series_repo/: mod.rs  tests.rs
src-tauri/src/clients/: aws.rs  paperspace.rs
src-tauri/src/clients/aws/: mod.rs
src-tauri/src/clients/file_config/: mod.rs
src-tauri/src/clients/paperspace/: mod.rs
src-tauri/src/common/: mod.rs  response_types.rs
src-tauri/src/common/response_types/: mod.rs  project_responses.rs
src-tauri/src/comms_endpoint/: aws_commands.rs  config_commands.rs  data_lake_commands.rs  image_verifier_commands.rs  mod.rs  model_hub_commands.rs  project_commands.rs
src-tauri/src/components/: mod.rs
src-tauri/src/components/adapters/: mod.rs
src-tauri/src/components/repository/: database.rs  file_config.rs  mod.rs
src-tauri/src/services/: aws_service.rs  config_service.rs  data_lake_service.rs  image_verifier_service.rs  mod.rs  model_hub_service.rs  project_service.rs
(+76 files in other folders)
