[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [] }
tokio = { version = "1.37.0", features = ["full"] }
reqwest= { version = "0.12.2", features= ["json"] }

dotenvy = "0.15.7"
rust-s3 = "0.35.1"
toml = "0.8.12"
bytes = "1.7.1"
base64 = "0.22.1"
futures-executor = "0.3"
regex = "1.10.6"
postgres = "0.19.8"
tokio-postgres = "0.7.11"
rand = "0.8.5"
chrono = "0.4.38"
postgres-types = { version = "0.2.8", features= ["derive"] }
ssh-rs = "0.5.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
